[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Tiger/tigre1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tiger/Tiger.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 13 )

[sub_resource type="CircleShape2D" id=4]
radius = 46.1736

[sub_resource type="CapsuleShape2D" id=3]
radius = 223.0
height = 0.0

[node name="Tiger" type="KinematicBody2D"]
collision_mask = 14
input_pickable = true
script = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -30.0
margin_right = 20.0
margin_bottom = -16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 6 )

[node name="Scalable" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Scalable"]
position = Vector2( 0, -1.19209e-07 )
scale = Vector2( 0.0397786, 0.040162 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="move_timer" type="Timer" parent="."]
autostart = true

[node name="tiger_agent" type="NavigationAgent2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Tiger_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tiger_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
